# app/api/restful/v1/handler/user/user_dto.go
@@ -4,12 +4,6 @@ import (
 	"github.com/shopspring/decimal"
 )
 
-type CreateUserReq struct {
-	Name     string `json:"name" binding:"required,min=3,max=20,alphanumunicode"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8,max=20"`
-}
-
 type User struct {
 	ID      uint            `json:"id"`
 	Name    string          `json:"name"`
@@ -17,12 +11,23 @@ type User struct {
 	Balance decimal.Decimal `json:"balance"`
 }
 
+type CreateUserReq struct {
+	Name     string `json:"name" binding:"required,min=3,max=20,alphanumunicode"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=8,max=20"`
+}
+
 type CreateUserResp struct {
 	Data *User `json:"data"`
 }
 
-type GetUserResp struct {
-	Data *User `json:"data"`
+type LoginReq struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=8,max=20"`
+}
+
+type LoginResp struct {
+	Token string `json:"token"`
 }
 
 type GetUsersResp struct {
